plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    //implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.2.12.Final'
    //implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.3.17.Final'
    //implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.28.Final'
    //implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
    //implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.3.9.Final'
    //implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.1.6.Final'

    implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.2.22.Final'
    implementation 'org.hsqldb:hsqldb:2.7.2'

    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'

    // UUID Creator
    implementation 'com.github.f4b6a3:uuid-creator:5.3.7'

    // JAX-B dependencies for JDK 9+
    //implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
    //implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"

    compileOnly 'org.projectlombok:lombok:+'
    annotationProcessor 'org.projectlombok:lombok:+'

    //
    // Test Dependencies
    //

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'

    testCompileOnly 'org.projectlombok:lombok:+'
    testAnnotationProcessor 'org.projectlombok:lombok:+'
}

test {
    useJUnitPlatform()
}


